# manopt-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: multi_constraints.rs  optimization_demo.rs  riemannian_adam_demo.rs
src/: constrained_module.rs  lib.rs  lie_group.rs  manifolds.rs  optimisers.rs  optimizers.rs  prelude.rs
src/manifolds/: matrix_groups.rs  sphere.rs  steifiel.rs  utils.rs
src/optimizers/: hessian_optimizer.rs  many_steps.rs  multiple.rs
